--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
               <a href="#" class="image featured"
                 ><img src="images/ghfinder.png" alt=""
               /></a>
-              <h3><a href="#">Github Finder App</a></h3>
+              <h3>
+                <a href="https://suggi96.github.io/GitHubFinder/"
+                  >Github Finder App</a
+                >
+              </h3>
               <p>
                 A vanilla JS app which displays user profile information of
                 GitHub
@@ -136,7 +140,9 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <a
+                href="https://suggi96.github.io/PictureSearch/"
+                class="image featured"
                 ><img src="images/imageSearch.png" alt=""
               /></a>
               <h3><a href="#">Image Search Engine</a></h3>
@@ -150,7 +156,9 @@
               <a href="#" class="image featured"
                 ><img src="images/blogspot.png" alt=""
               /></a>
-              <h3><a href="#">BlogSpot</a></h3>
+              <h3>
+                <a href="https://suggi96.github.io/Blogspot/">BlogSpot</a>
+              </h3>
               <p>Bootstrap4 themed admin portal to manaage blogging site</p>
             </article>
           </div>
