--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
-                ><img src="images/ghfinder.png" alt=""
+                ><img src="images/ghfinder.png" alt="" 
               /></a>
               <h3>
-                <a href="https://suggi96.github.io/GitHubFinder/"
+                <a href="https://suggi96.github.io/GitHubFinder/" target="_blank"
                   >Github Finder App</a
                 >
               </h3>
@@ -141,7 +141,8 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://suggi96.github.io/PictureSearch/"
+                href="https://suggi96.github.io/PictureSearch/" target="_blank"
+								>Github Finder App</a
                 class="image featured"
                 ><img src="images/imageSearch.png" alt=""
               /></a>
@@ -153,7 +154,8 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <a href="#" class="image featured" target="_blank"
+							>Github Finder App</a
                 ><img src="images/blogspot.png" alt=""
               /></a>
               <h3>
