--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
+							<!-- new tab -->
               <a href="#" class="image featured" target="_blank"
 							>Github Finder App</a
                 ><img src="images/blogspot.png" alt=""
