--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 ><img src="images/ghfinder.png" alt="" 
               /></a>
               <h3>
-                <a href="https://suggi96.github.io/GitHubFinder/" target="_blank"
+                <a href="https://suggi96.github.io/GitHubFinder/"
                   >Github Finder App</a
                 >
               </h3>
@@ -141,7 +141,7 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://suggi96.github.io/PictureSearch/" target="_blank"
+                href="https://suggi96.github.io/PictureSearch/" 
 								>Github Finder App</a
                 class="image featured"
                 ><img src="images/imageSearch.png" alt=""
@@ -154,8 +154,8 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-							<!-- new tab -->
-              <a href="#" class="image featured" target="_blank"
+							<!-- new tab open-->
+              <a href="#" class="image featured"
 							>Github Finder App</a
                 ><img src="images/blogspot.png" alt=""
               /></a>
