--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
         <div class="row">
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/ghfinder.png" alt="" 
+              <a
+                href="https://suggi96.github.io/GitHubFinder"
+                class="image featured"
+                ><img src="images/ghfinder.png" alt=""
               /></a>
               <h3>
-                <a href="https://suggi96.github.io/GitHubFinder/"
+                <a href="https://suggi96.github.io/GitHubFinder"
                   >Github Finder App</a
                 >
               </h3>
@@ -141,12 +143,15 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://suggi96.github.io/PictureSearch/" 
-								>Github Finder App</a
+                href="https://suggi96.github.io/PictureSearch/"
                 class="image featured"
                 ><img src="images/imageSearch.png" alt=""
               /></a>
-              <h3><a href="#">Image Search Engine</a></h3>
+              <h3>
+                <a href="https://suggi96.github.io/PictureSearch/"
+                  >Image Search Engine</a
+                >
+              </h3>
               <p>
                 A React app which displays images based on user's search string.
               </p>
@@ -154,14 +159,12 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-							<!-- new tab open-->
-              <a href="#" class="image featured"
-							>Github Finder App</a
+              <a
+                href="https://suggi96.github.io/Blogspot"
+                class="image featured"
                 ><img src="images/blogspot.png" alt=""
               /></a>
-              <h3>
-                <a href="https://suggi96.github.io/Blogspot/">BlogSpot</a>
-              </h3>
+              <h3><a href="https://suggi96.github.io/Blogspot">BlogSpot</a></h3>
               <p>Bootstrap4 themed admin portal to manaage blogging site</p>
             </article>
           </div>
