--- a/index.html
+++ b/index.html
@@ -233,12 +233,16 @@
             <h3>Find me on ...</h3>
             <ul class="social">
               <li>
-                <a href="#" class="icon brands fa-linkedin-in"
+                <a
+                  href="https://www.linkedin.com/in/sugandh-m-79877157#"
+                  class="icon brands fa-linkedin-in"
                   ><span class="label">LinkedIn</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands fa-github"
+                <a
+                  href="https://github.com/Suggi96"
+                  class="icon brands fa-github"
                   ><span class="label">Github</span></a
                 >
               </li>
