--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <span class="image fit">
-                <img src="/images/react.png" alt="react" />
+                <img src="./images/react.png" alt="react" />
               </span>
               <h3>React</h3>
               <p>
