--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <span class="image fit">
-                <img src="/images/javascript-logo-banner.jpg" alt="js" />
+                <img src="./images/javascript-logo-banner.jpg" alt="js" />
               </span>
               <h3>Javascript ES6</h3>
               <p>
